Use r2dbc, java 21 and mongo